--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ballka",
-  "short_name": "ballka",
+  "name": "Бегу.ЖИВУ",
+  "short_name": "Б.Ж",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
