--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Бегу.ЖИВУ",
-  "short_name": "Б.Ж",
+  "short_name": "Бегу.ЖИВУ",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
